# llm-app-trainings

./: .gitignore  LICENSE  README.md  config.py  pdf_loader.py  pyproject.toml  test_ollama.py  vector_store.py
chapter01/pdf_summary/: README.md  app.py  check_db.py  llm_bot.py  pyproject.toml
chapter02/01_C4datasets/: README.md  notebook.py
